base/src/test/resources/failure/holes/issue747.aya.txt
In file $FILE:6:13 ->

  4 | def abs (a : Int) : Nat
  5 |   | pos a => a
  6 |   | neg a => {??}
                   ^--^

Goal: Goal of type
        Nat
        (Normalized: Nat)
      Context:
      {a : Nat}
      {a : Int} (not in scope)
In file $FILE:6:13 ->

  4 | def abs (a : Int) : Nat
  5 |   | pos a => a
  6 |   | neg a => {??}
                   ^--^

Error: Unsolved meta
What are you doing?
